force-app/main/default/objects/Activity/fields/CP_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_Activity_ID__c</fullName>
    <externalId>true</externalId>
    <label>CP_Activity_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>