force-app/main/default/objects/Activity/fields/Old_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Activity_Id__c</fullName>
    <label>Old Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>