force-app/main/default/objects/Activity/fields/ONC_Scientific_Topic__c.field-meta.xml
<CustomField>
    <fullName>ONC_Scientific_Topic__c</fullName>
    <label>Scientific Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>Cystinosis</fullName>
            </value>
            <value>
                <fullName>ADA-SCID</fullName>
            </value>
            <value>
                <fullName>Invasive Fungal Infections</fullName>
            </value>
            <value>
                <fullName>Hodgkin’s Disease</fullName>
            </value>
            <value>
                <fullName>Metabolic Disease</fullName>
            </value>
            <value>
                <fullName>ESRD</fullName>
            </value>
            <value>
                <fullName>Glioma</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
                <isActive>false</isActive>
                <label>ALL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>