force-app/main/default/objects/Activity/fields/ONC_Type_Call__c.field-meta.xml
<CustomField>
    <fullName>ONC_Type_Call__c</fullName>
    <label>Type Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Disease Awareness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>