force-app/main/default/objects/Activity/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <description>Standard Subject field does not support drop down box even though it is defined as Pick list. This field is created to solve the issue. Workflow will copy the field value to standard subject field.</description>
    <label>Task Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
                <default>true</default>
                <label>Call</label>
            </value>
            <value>
                <fullName>Send Letter</fullName>
            </value>
            <value>
                <fullName>Send Quote</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>